native/include/mempool.h

typedef struct rte_mbuf* restrict* restrict mbuf_array_t;
struct rte_mbuf* mbuf_alloc();
void mbuf_free(struct rte_mbuf* buf);
int mbuf_alloc_bulk(struct rte_mbuf **array, unsigned int cnt);
int mbuf_free_bulk(mbuf_array_t array, int cnt);